adapt swagger to filterProps change
